cmake_minimum_required(VERSION 3.22)

project(effective_modern_cpp)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(item18)
add_subdirectory(item19)
add_subdirectory(item20)
add_subdirectory(item21)
add_subdirectory(tmp)
add_subdirectory(others)
add_subdirectory(virtual)


